--- a/style.css
+++ b/style.css
@@ -165,9 +165,35 @@ select {
   text-transform: none;
 }
 
+.zen-maru-gothic-light {
+  font-family: "Zen Maru Gothic", serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.zen-maru-gothic-regular {
+  font-family: "Zen Maru Gothic", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.zen-maru-gothic-medium {
+  font-family: "Zen Maru Gothic", serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.zen-maru-gothic-bold {
+  font-family: "Zen Maru Gothic", serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
 body {
-  font-family: "TsukuARdGothic-Regular", sans-serif;
-  color: #483b35;
+  font-family: "Zen Maru Gothic", serif;
+  font-weight: 300;
+  font-style: normal;
+  color: #725d53;
 }
 
 img {
@@ -228,6 +254,7 @@ header .container .wrapper nav ul li:hover a {
 
 .fv .container .wrapper {
   position: relative;
+  background: #fcfcf8;
 }
 .fv .container .wrapper .mv {
   width: 70%;
@@ -235,7 +262,7 @@ header .container .wrapper nav ul li:hover a {
 .fv .container .wrapper .text-wrapper {
   position: absolute;
   top: 31%;
-  right: 12%;
+  right: 11%;
 }
 .fv .container .wrapper .text-wrapper img {
   width: 90%;
@@ -249,6 +276,8 @@ header .container .wrapper nav ul li:hover a {
   color: white;
   background: #f3a57f;
   border-radius: 5px;
+  font-weight: 400;
+  letter-spacing: 3px;
 }
 .fv .container .wrapper .text-wrapper h2 span.first {
   margin-top: 10px;
@@ -268,4 +297,425 @@ header .container .wrapper nav ul li:hover a {
   position: absolute;
   right: 6%;
   bottom: 1%;
+}
+
+.onayami .container {
+  position: relative;
+}
+.onayami .container .wrapper {
+  padding-top: 90px;
+  padding-bottom: 60px;
+  background: #fcfcf8;
+}
+.onayami .container .wrapper .section-header {
+  text-align: center;
+}
+.onayami .container .wrapper .section-header h2 {
+  text-align: center;
+  font-size: 28px;
+  font-weight: 500;
+  letter-spacing: 3px;
+}
+.onayami .container .wrapper .section-header img {
+  width: 325px;
+  margin-top: 15px;
+}
+.onayami .container .wrapper .content-wrapper {
+  width: 990px;
+  margin: 0 auto;
+  margin-top: 70px;
+}
+.onayami .container .wrapper .content-wrapper .above-wrapper {
+  padding-right: 70px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.onayami .container .wrapper .content-wrapper .above-wrapper .content {
+  width: 220px;
+  position: relative;
+}
+.onayami .container .wrapper .content-wrapper .above-wrapper .content p {
+  text-align: center;
+  letter-spacing: 2px;
+  line-height: 1.2em;
+  font-weight: 500;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+.onayami .container .wrapper .content-wrapper .above-wrapper .content:nth-child(2) {
+  -webkit-transform: translateY(-30px);
+          transform: translateY(-30px);
+}
+.onayami .container .wrapper .content-wrapper .above-wrapper .content:nth-child(3) {
+  width: 200px;
+}
+.onayami .container .wrapper .content-wrapper .above-wrapper .content:nth-child(3) p {
+  -webkit-transform: translateY(-65%);
+          transform: translateY(-65%);
+}
+.onayami .container .wrapper .content-wrapper .above-wrapper .content:nth-child(4) {
+  width: 175px;
+  -webkit-transform: translateY(25px);
+          transform: translateY(25px);
+}
+.onayami .container .wrapper .content-wrapper .above-wrapper .content:nth-child(4) p {
+  -webkit-transform: translateY(-160%);
+          transform: translateY(-160%);
+}
+.onayami .container .wrapper .content-wrapper .bottom-wrapper {
+  padding-left: 70px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.onayami .container .wrapper .content-wrapper .bottom-wrapper .content {
+  width: 220px;
+  position: relative;
+}
+.onayami .container .wrapper .content-wrapper .bottom-wrapper .content p {
+  text-align: center;
+  letter-spacing: 2px;
+  line-height: 1.2em;
+  font-weight: 500;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+.onayami .container .wrapper .content-wrapper .bottom-wrapper .content:nth-child(1) {
+  width: 180px;
+  -webkit-transform: translateY(15px);
+          transform: translateY(15px);
+}
+.onayami .container .wrapper .content-wrapper .bottom-wrapper .content:nth-child(1) p {
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+}
+.onayami .container .wrapper .content-wrapper .bottom-wrapper .content:nth-child(2) {
+  width: 190px;
+  -webkit-transform: translateY(27px);
+          transform: translateY(27px);
+}
+.onayami .container .wrapper .content-wrapper .bottom-wrapper .content:nth-child(2) p {
+  -webkit-transform: translateY(-80%);
+          transform: translateY(-80%);
+}
+.onayami .container .wrapper .content-wrapper .bottom-wrapper .content:nth-child(3) {
+  -webkit-transform: translateY(-10px);
+          transform: translateY(-10px);
+}
+.onayami .container .wrapper .content-wrapper .bottom-wrapper .content:nth-child(4) {
+  width: 185px;
+  -webkit-transform: translateY(25px);
+          transform: translateY(25px);
+}
+.onayami .container .wrapper .content-wrapper .bottom-wrapper .content:nth-child(4) p {
+  -webkit-transform: translateY(-80%);
+          transform: translateY(-80%);
+}
+.onayami .container > img {
+  width: 30%;
+  position: absolute;
+  bottom: -50px;
+  left: 0;
+  z-index: 10;
+}
+
+.message .container .wrapper {
+  position: relative;
+  z-index: 9;
+}
+.message .container .wrapper h2 {
+  width: 880px;
+  position: absolute;
+  top: 20%;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+}
+.message .container .wrapper h2 .text p {
+  font-size: 2em;
+  font-weight: 400;
+  white-space: nowrap;
+}
+.message .container .wrapper h2 .text img {
+  width: 100%;
+}
+.message .container .wrapper h2 .text.text2 img {
+  width: 40%;
+}
+.message .container .wrapper > p {
+  width: 75%;
+  max-width: 1050px;
+  font-weight: 500;
+  letter-spacing: 1.6px;
+  line-height: 2em;
+  position: absolute;
+  top: 38%;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  -webkit-transform: translateX(10%);
+          transform: translateX(10%);
+}
+
+.features .container .wrapper {
+  background: #fcfcf8;
+  padding: 170px 0 80px 0;
+  position: relative;
+}
+.features .container .wrapper > img {
+  max-width: 1440px;
+}
+.features .container .wrapper .content-wrapper {
+  width: 90%;
+  max-width: 1150px;
+  position: absolute;
+  top: 50px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.features .container .wrapper .content-wrapper img {
+  width: 35%;
+  max-width: 410px;
+}
+.features .container .wrapper .content-wrapper .text-content-wrapper {
+  width: 55%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.features .container .wrapper .content-wrapper .text-content-wrapper .content {
+  width: 43%;
+  padding: 90px 15px 30px 15px;
+  background: #fdf4f4;
+  font-weight: 500;
+  margin-top: 30px;
+  border: solid 1px #f5e4e4;
+  border-radius: 22px;
+  position: relative;
+}
+.features .container .wrapper .content-wrapper .text-content-wrapper .content img {
+  width: 290px;
+  position: absolute;
+  top: 20px;
+  left: -13.5px;
+}
+.features .container .wrapper .content-wrapper .text-content-wrapper .content p {
+  letter-spacing: 2.5px;
+  line-height: 1.5em;
+}
+
+.contact .container {
+  background: #fcfcf8;
+  padding-top: 100px;
+}
+.contact .container .wrapper {
+  width: 90%;
+  max-width: 1220px;
+  margin: 0 auto;
+  background: #f6e8d4;
+  padding: 90px 0 70px 0;
+  border-radius: 20px;
+}
+.contact .container .wrapper .section-header {
+  width: 380px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.contact .container .wrapper .section-header img {
+  width: 60px;
+}
+.contact .container .wrapper .section-header h2 {
+  font-size: 30px;
+  font-weight: 500;
+  color: #e28a69;
+  text-align: center;
+}
+.contact .container .wrapper p {
+  text-align: center;
+  margin-top: 40px;
+  line-height: 2em;
+  font-weight: 500;
+}
+.contact .container .wrapper .btn {
+  background: #e28a69;
+  width: 360px;
+  margin: 0 auto;
+  margin-top: 40px;
+  text-align: center;
+  padding: 20px 0;
+  border-radius: 50px;
+  position: relative;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+.contact .container .wrapper .btn a {
+  color: white;
+  letter-spacing: 1px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+.contact .container .wrapper .btn a:after {
+  position: absolute;
+  border: 1px dashed white;
+  content: "";
+  top: 2px;
+  bottom: 2px;
+  left: 2px;
+  right: 2px;
+  border-radius: 50px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+.contact .container .wrapper .btn:hover {
+  background: white;
+}
+.contact .container .wrapper .btn:hover a {
+  color: #e28a69;
+}
+.contact .container .wrapper .btn:hover a:after {
+  border: 1px dashed #e28a69;
+}
+
+.profile .container {
+  padding-top: 90px;
+  background: #fcfcf8;
+}
+.profile .container .wrapper {
+  width: 90%;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+.profile .container .wrapper .sec-header {
+  text-align: center;
+}
+.profile .container .wrapper .sec-header h2 {
+  font-size: 28px;
+  text-align: center;
+  font-weight: 500;
+  letter-spacing: 3px;
+}
+.profile .container .wrapper .sec-header img {
+  width: 240px;
+  margin-top: 15px;
+}
+.profile .container .wrapper .content-wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 80px;
+}
+.profile .container .wrapper .content-wrapper img {
+  width: 40%;
+}
+.profile .container .wrapper .content-wrapper .text-wrapper {
+  width: 55%;
+}
+.profile .container .wrapper .content-wrapper .text-wrapper .name {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.profile .container .wrapper .content-wrapper .text-wrapper .name span:nth-child(1) {
+  font-size: 26px;
+  letter-spacing: 3px;
+  font-weight: 400;
+}
+.profile .container .wrapper .content-wrapper .text-wrapper .name span:nth-child(2) {
+  letter-spacing: 3px;
+  font-weight: 500;
+  margin-left: 20px;
+}
+.profile .container .wrapper .content-wrapper .text-wrapper ul {
+  margin-top: 30px;
+  margin-left: 25px;
+}
+.profile .container .wrapper .content-wrapper .text-wrapper ul li {
+  line-height: 1.8em;
+  font-weight: 500;
+  position: relative;
+}
+.profile .container .wrapper .content-wrapper .text-wrapper ul li:before {
+  content: "";
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: -23px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  background: #e19274;
+}
+.profile .container .wrapper .content-wrapper .text-wrapper .text {
+  margin-top: 30px;
+  line-height: 1.7em;
+  letter-spacing: 2px;
+  font-weight: 500;
 }/*# sourceMappingURL=style.css.map */
