--- a/scss/style-template/_page-top.scss
+++ b/scss/style-template/_page-top.scss
@@ -395,9 +395,11 @@ header{
         border-radius: 50px;
         position: relative;
         transition: .3s;
+        border: solid 1px #e28a69;
         a{
           color: white;
           letter-spacing: 1px;
+          font-weight: 400;
           transition: .3s;
           &:after {
             position: absolute;
@@ -427,7 +429,7 @@ header{
 
 .profile{
   .container{
-    padding-top: 90px;
+    padding: 90px 0 100px 0;
     background: #fcfcf8;
     .wrapper{
       width: 90%;
@@ -497,6 +499,232 @@ header{
             line-height: 1.7em;
             letter-spacing: 2px;
             font-weight: 500;
+          }
+        }
+      }
+    }
+  }
+}
+
+.service{
+  .container{
+    .wrapper{
+      background: #fdfdfa;
+      .sec-header{
+        background-image: url(img/bg-service.png);
+        background-size: cover;
+        background-position: center;
+        padding: 80px 0 120px 0;
+        position: relative;
+        &:before{
+          content: '';
+          background: rgba(0, 0, 0, .4);
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          top: 0;
+          left: 0;
+          z-index: 1;
+        }
+        h2{
+          text-align: center;
+          font-size: 28px;
+          color: white;
+          letter-spacing: 3px;
+          font-weight: 500;
+          position: relative;
+          z-index: 2
+        }
+      }
+      .service-wrapper{
+        width: 90%;
+        max-width: 1220px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        transform: translateY(-60px);
+        position: relative;
+        z-index: 10;
+        .service{
+          width: 27.5%;
+          background: #feeed7;
+          border-radius: 30px;
+          padding: 30px;
+          .info{
+            text-align: center;
+            font-weight: 700;
+            letter-spacing: 3px;
+            font-size: 20px;
+          }
+          .service-name{
+            margin-top: 30px;
+            text-align: center;
+            p{
+              font-size: 26px;
+              color: #f08962;
+              font-weight: 500;
+              letter-spacing: 2px;
+              text-align: center;
+            }
+            img{
+              width: 230px;
+              transform: translateY(-5px);
+            }
+          }
+          .price{
+            text-align: center;
+            font-weight: 700;
+            font-size: 20px;
+            letter-spacing: 3px;
+            line-height: 1.3em;
+            margin: 20px 0 30px 0;
+          }
+          .notice{
+            font-size: 12px;
+            width: 90%;
+            margin: 0 auto;
+            letter-spacing: 1px;
+            line-height: 1.35em;
+            margin-top: 10px;
+            font-weight: 500;
+          }
+          .osusume{
+            background: #e19274;
+            color: white;
+            text-align: center;
+            padding: 7px;
+            font-size: 14px;
+            border-radius: 5px;
+            font-weight: 400;
+            margin-top: 20px;
+          }
+          ul{
+            margin-top: 15px;
+            margin-left: 30px;
+            li{
+              font-weight: 500;
+              line-height: 1.5em;
+              position: relative;
+              &:before{
+                content: '';
+                width: 10px;
+                height: 10px;
+                border-radius: 50%;
+                background: #e19274;
+                position: absolute;
+                top: 50%;
+                left: -17px;
+                transform: translateY(-50%);
+              }
+            }
+          }
+          .text{
+            margin-top: 30px;
+            font-weight: 500;
+            letter-spacing: 1px;
+            line-height: 1.3em;
+          }
+          &:nth-child(2){
+            width: 27.5%;
+            background: #ffe3e2;
+            border-radius: 30px;
+            padding: 30px;
+            .service-name {
+              margin-top: 30px;
+              text-align: center;
+
+              p {
+                font-size: 26px;
+                color: #f08962;
+                font-weight: 500;
+                letter-spacing: 2px;
+                text-align: center;
+              }
+
+              img {
+                width: 130px;
+                transform: translateY(-5px);
+              }
+            }
+            >img{
+              margin-top: 17px;
+            }
+          }
+          &:nth-child(3){
+            width: 27.5%;
+            background: #e4f2f2;
+            border-radius: 30px;
+            padding: 30px;
+            .service-name{
+              >img{
+                width: 300px;
+                &:nth-child(4){
+                  width: 200px;
+                }
+              }
+            }
+          }
+        }
+      }
+      .notice2{
+        text-align: center;
+        font-weight: 500;
+        transform: translateY(-50px);
+        letter-spacing: 1px;
+      }
+      .notice3{
+        text-align: center;
+        p{
+          text-align: center;
+          font-size: 22px;
+          font-weight: 500;
+          letter-spacing: 2px;
+        }
+        img{
+          width: 760px;
+          transform: translate(-7px, -5px);
+        }
+      }
+      .btn {
+        background: #e28a69;
+        width: 360px;
+        margin: 0 auto;
+        margin-top: 40px;
+        text-align: center;
+        padding: 20px 0;
+        border-radius: 50px;
+        position: relative;
+        transition: .3s;
+        border: solid 1px #e28a69;
+
+        a {
+          color: white;
+          letter-spacing: 1px;
+          font-weight: 400;
+          transition: .3s;
+
+          &:after {
+            position: absolute;
+            border: 1px dashed white;
+            content: "";
+            top: 2px;
+            bottom: 2px;
+            left: 2px;
+            right: 2px;
+            border-radius: 50px;
+            transition: .3s;
+          }
+        }
+
+        &:hover {
+          background: white;
+
+          a {
+            color: #e28a69;
+
+            &:after {
+              border: 1px dashed #e28a69;
+            }
           }
         }
       }
