--- a/scss/style-template/_page-top.scss
+++ b/scss/style-template/_page-top.scss
@@ -738,7 +738,7 @@ header{
     position: relative;
     .wrapper{
       position: relative;
-      z-index: 2;
+      z-index: 4;
       .sec-header{
         text-align: center;
         padding-top: 120px;
@@ -816,9 +816,182 @@ header{
       position: absolute;
       top: 0;
       left: 0;
-      z-index: 1;
+      z-index: 3;
       height: 95vw;
       max-height: 1400px;
+    }
+  }
+}
+
+.customer-voice{
+  .container{
+    position: relative;
+    .wrapper{
+      padding-top: 400px;
+      background: #f5e3d8;
+      position: relative;
+      z-index: 2;
+      .sec-header{
+        padding-top: 70px;
+        text-align: center;
+        h2{
+          text-align: center;
+          font-weight: 500;
+          font-size: 32px;
+        }
+        img{
+          width: 180px;
+          margin-top: 20px;
+        }
+      }
+      .slick-container{
+        position: relative;
+        width: 90%;
+        max-width: 1200px;
+        margin: 0 auto;
+        margin-top:40px;
+        .voice-wrapper{
+          .voice{
+            padding: 70px 0 30px 0;
+            .inner{
+              width: 75%;
+              padding: 100px 30px 20px 30px;
+              background: white;
+              box-shadow: 9px 7px 0 #f1bca8;
+              border-radius: 20px;
+              margin-left: 20px;
+              position: relative;
+              .img-wrapper{
+                display: flex;
+                align-items: last baseline;
+                justify-content: space-between;
+                position: absolute;
+                top: -12%;
+                left: 12%;
+                right: 12%;
+                img{
+                  width: 47%;
+                }
+              }
+              .name{
+                text-align: center;
+                background: #e19274;
+                color: white;
+                padding: 7px;
+                border-radius: 5px;
+                font-weight: 400;
+                span{
+                  margin-left: 12px;
+                }
+              }
+              .type{
+                color: #e19274;
+                text-align: center;
+                font-weight: 400;
+                margin-top: 10px;
+                display: flex;
+                justify-content: center;
+                img{
+                  width: 20px;
+                  margin-right: 10px;
+                }
+              }
+              .text{
+                font-weight: 400;
+                letter-spacing: 1px;
+                margin-top: 10px;
+                line-height: 1.4em;
+              }
+            }
+          }
+        }
+        .arrow{
+          width: 70px;
+          height: 70px;
+          background: white;
+          border: solid 3px #e19274;
+          border-radius: 50%;
+          text-align: center;
+          cursor: pointer;
+          position: absolute;
+          top: 50%;
+          transform: translateY(-50%);
+          i{
+            font-size: 2em;
+            line-height: 70px;
+            color: #e19274;
+          }
+          &.prev{
+            left: -90px;
+          }
+          &.next{
+            right: -90px;
+          }
+        }
+      }
+    }
+    >img{
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 1;
+      height: 85vw;
+      max-height: 1200px;
+    }
+  }
+}
+
+.faq{
+  .container{
+    background-image: url(img/bg-faq.png);
+    background-size: cover;
+    background-position: center;
+    .wrapper{
+      padding-top: 170px;
+      .sec-header{
+        text-align: center;
+        h2{
+          text-align: center;
+          font-weight: 500;
+          font-size: 32px;
+        }
+        img{
+          width: 200px;
+        }
+      }
+      .faq-wrapper{
+        width: 90%;
+        max-width: 800px;
+        margin: 0 auto;
+        margin-top: 100px;
+        li{
+          font-weight: 500;
+          margin-top: 50px;
+          p{
+            letter-spacing: 1px;
+            line-height: 1.4em;
+            &:nth-child(1){
+              color: #e19274;
+            }
+            &:nth-child(3){
+              margin-top: 8px;
+            }
+          }
+        }
+      }
+      .faq-img-slide{
+        width: 100%;
+        max-width: 1920px;
+        margin: 0 auto;
+        margin-top: 60px;
+        .faq-slide{
+          li{
+            img{
+              width: 90%;
+            }
+          }
+        }
+      }
     }
   }
 }
